feat: :sparkles: Contenido pagina principal
Se agrego el contenido de la pagina principal al html.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FoodLover</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="storage/img/logo.png" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <div class="pag1">
+        <header>
+            <nav>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">MENUS</a></li>
+                        <li><a href="#">OFFERS</a></li>
+                    </ul>
+                </div>
+                <div class="icon1">
+                    <img src="storage/img/logo.png" alt="logo">
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">GALLERY</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#">BLOG</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="container1">
+                <img src="storage/img/placeYourImageHere0.png" alt="img-comida">
+                <div class="titulo">
+                    <h1>Contact Us For Best Breakfasr</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate quam iste error assumenda. Ea sed ipsam sint sunt accusamus est dolorem, accusantium totam nemo officia!</p>
+                    <button>Conta Us</button>
+                </div>
+            </div>
+        </main>
+    </div>
     
 </body>
 </html>
