feat: :construction: Trabajando contenido pagina 1
Se esta trabajando en el contenido de la pagina 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="pag1">
+        <img class="imagen-fondo" src="storage/img/placeYourImageHere0.png" alt="imagen-fondo">
         <header>
             <nav>
                 <div class="menu">
@@ -34,7 +35,7 @@
         </header>
         <main>
             <div class="container1">
-                <img src="storage/img/placeYourImageHere0.png" alt="img-comida">
+                <img src="storage/img/placeYourImageHere1.png" alt="img-comida">
                 <div class="titulo">
                     <h1>Contact Us For Best Breakfasr</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate quam iste error assumenda. Ea sed ipsam sint sunt accusamus est dolorem, accusantium totam nemo officia!</p>
