--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,42 +9,44 @@
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <div class="pag1">
-        <img class="imagen-fondo" src="storage/img/placeYourImageHere0.png" alt="imagen-fondo">
-        <header>
-            <nav>
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">MENUS</a></li>
-                        <li><a href="#">OFFERS</a></li>
-                    </ul>
-                </div>
-                <div class="icon1">
-                    <img src="storage/img/logo.png" alt="logo">
-                </div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                        <li><a href="#">BLOG</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <main>
+    <header>
+        <nav>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">MENUS</a></li>
+                    <li><a href="#">OFFERS</a></li>
+                </ul>
+            </div>
+            <div class="icon1">
+                <img src="storage/img/logo.png" alt="logo">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">BLOG</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <section>
             <div class="container1">
-                <img src="storage/img/placeYourImageHere1.png" alt="img-comida">
+                <img class="img2" src="storage/img/placeYourImageHere1.png" alt="img-comida">
                 <div class="titulo">
-                    <h1>Contact Us For Best Breakfasr</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate quam iste error assumenda. Ea sed ipsam sint sunt accusamus est dolorem, accusantium totam nemo officia!</p>
+                    <h1 class="letratitulo">Contact Us For Best Breakfasr</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate
+                        quam iste error assumenda. Ea sed ipsam sint sunt accusamus est dolorem, accusantium totam nemo
+                        officia!</p>
                     <button>Conta Us</button>
                 </div>
             </div>
-        </main>
-    </div>
-    
+        </section>
+    </header>
+
 </body>
+
 </html>
