--- a/index.html
+++ b/index.html
@@ -13,40 +13,69 @@
 <body>
     <header>
         <nav>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">MENUS</a></li>
-                    <li><a href="#">OFFERS</a></li>
+            <div>
+                <ul class="mnu">
+                    <li><a class="menu" href="#">HOME</a></li>
+                    <li><a class="menu" href="#">ABOUT</a></li>
+                    <li><a class="menu" href="#">MENUS</a></li>
+                    <li><a class="menu" href="#">OFFERS</a></li>
                 </ul>
             </div>
             <div class="icon1">
                 <img src="storage/img/logo.png" alt="logo">
             </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">BLOG</a></li>
+            <div>
+                <ul class="mnu">
+                    <li><a class="menu" href="#">GALLERY</a></li>
+                    <li><a class="menu" href="#">CONTACT</a></li>
+                    <li><a class="menu" href="#">BLOG</a></li>
                 </ul>
             </div>
         </nav>
-
         <section>
             <div class="container1">
                 <img class="img2" src="storage/img/placeYourImageHere1.png" alt="img-comida">
                 <div class="titulo">
                     <h1 class="letratitulo">Contact Us For Best Breakfasr</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate
                         quam iste error assumenda. Ea sed ipsam sint sunt accusamus est dolorem, accusantium totam nemo
                         officia!</p>
-                    <button>Conta Us</button>
+                    <button class="btn">Contact Us</button>
                 </div>
             </div>
         </section>
     </header>
-
+    <main>
+        <section class="pag2">
+            <article class="mit1">
+                <div class="art1">
+                    <img class="img3" src="storage/img/placeYourImageHereGaleria0.png" alt="img2-comida">
+                    <div class="container2">
+                        <h1>About Us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perferendis unde provident eum, maiores aut nam quae perspiciatis, possimus ducimus neque. Rerum, dolorum perspiciatis qui culpa totam harum. Expedita, illum!</p>
+                    </div>
+                </div>
+            </article>
+            <article class="mit2">
+                <img class="forma" src="storage/img/placeYourImageHereFood.png" alt="img3-forma">
+                <img class="img4" src="storage/img/placeYourImageHereFood0.png" alt="img4-comida">
+                <img class="img5" src="storage/img/placeYourImageHereFood3.png" alt="img5-comida">
+                <img class="img6" src="storage/img/placeYourImageHereFood1.png" alt="img6-comida">
+                <div class="container3">
+                    <h1>Our Food Quality</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem blanditiis quis officiis ut saepe atque in est earum, repudiandae nemo facilis, assumenda quam itaque ratione magni odio minima odit eligendi.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore vel eius ipsam enim repudiandae, consectetur, officiis eligendi doloremque, eum ex quos quidem beatae eaque impedit maxime in dolor soluta?
+                    </p>
+                </div>
+            </article>
+        </section>
+        <section class="pag3">
+            <h1>Our Food Gallery</h1>
+            <div class="galeria">
+                <img src="storage/img/placeYourImageHereGaleria0.png" alt="img7-comida">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
