feat: :construction: Se crearon las paginas 2 y 3
Se esta trabajando en la pagina 4

--- a/index.html
+++ b/index.html
@@ -70,9 +70,22 @@
             </article>
         </section>
         <section class="pag3">
-            <h1>Our Food Gallery</h1>
+            <div class="divpag3">
+                <h1>Our Food Gallery</h1>
             <div class="galeria">
-                <img src="storage/img/placeYourImageHereGaleria0.png" alt="img7-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria0.png" alt="img7-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria1.png" alt="img8-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria2.png" alt="img9-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria3.png" alt="img10-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria4.png" alt="img11-comida">
+                <img class="img7" src="storage/img/placeYourImageHereGaleria5.png" alt="img12-comida">
+            </div>
+            </div>
+        </section>
+        <section class="pag4">
+            <div class="container4">
+                <h1>Enjoy Our Food</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, praesentium? Maxime veritatis illo, voluptatum sunt incidunt impedit sit ut, quibusdam doloribus velit natus, corporis quaerat repellendus. Est aut ea similique?</p>
             </div>
         </section>
     </main>
