feat: :alembic: Se crearon paginas 4 y 5, trabajando en la 6
Se estan probando cambios par aposibles mejoras y se esta trabajando en la pagina 6

--- a/index.html
+++ b/index.html
@@ -88,6 +88,56 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, praesentium? Maxime veritatis illo, voluptatum sunt incidunt impedit sit ut, quibusdam doloribus velit natus, corporis quaerat repellendus. Est aut ea similique?</p>
             </div>
         </section>
+        <section class="pag5">
+            <h1>Our Menu</h1>
+            <div class="containerprin">
+                <div class="containerimg">
+                    <img class="img9" src="storage/img/placeYourImageHereMenu0.png" alt="img13-bebida">
+                    <img class="img9" src="storage/img/placeYourImageHereMenu1.png" alt="img14-comida">
+                    <img class="img9" src="storage/img/placeYourImageHereMenu2.png" alt="img15-comida">
+                </div>
+                <div class="subcontainer">
+                    <div class="sub">
+                        <h1>ITALIAN SOURCE MUSHROOM</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, laudantium iusto. Eius temporibus doloremque, quod excepturi eum tenetur nostrum. Veniam, vel nesciunt earum iste numquam eos dicta. Laboriosam, omnis saepe.</P>
+                        <h2>Price: $12.00</h2>
+                    </div>
+                    <div class="sub">
+                        <h1>ITALIAN SOURCE MUSHROOM</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, laudantium iusto. Eius temporibus doloremque, quod excepturi eum tenetur nostrum. Veniam, vel nesciunt earum iste numquam eos dicta. Laboriosam, omnis saepe.</P>
+                        <h2>Price: $12.00</h2>
+                    </div>
+                    <div class="sub">
+                        <h1>ITALIAN SOURCE MUSHROOM</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, laudantium iusto. Eius temporibus doloremque, quod excepturi eum tenetur nostrum. Veniam, vel nesciunt earum iste numquam eos dicta. Laboriosam, omnis saepe.</P>
+                        <h2>Price: $12.00</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pag6">
+            <div class="cinta">
+                <div class="container5">
+                    <h1>Enjoy Best Meal</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis at deleniti a cupiditate temporibus nisi eveniet sint dicta nihil, adipisci harum quibusdam nam.</p>
+                </div>
+            </div>
+            <div class="resto">
+                <img class="img11" src="storage/img/logo2.png" alt="img17-logo">
+                <div>
+                    <li class="menufinal">
+                        <a href="#">HOME</a>
+                        <a href="#">ABOUT US</a>
+                        <a href="#">SERVICES</a>
+                        <a href="#">FOODS</a>
+                        <a href="#">CONTACT</a>
+                        <a href="#">LOCATION</a>
+                    </li>
+                    <div class="iconos"></div>
+                </div>
+            </div>
+            <img class="img10" src="storage/img/placeYourImageHere5.png" alt="img16-comida">
+        </section>
     </main>
 </body>
 
