fix: :bug: Correccion de errores
Se corrigieron errores de tamaño de las paginas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div>
                 <ul class="mnu">
-                    <li><a class="menu" href="#">HOME</a></li>
+                    <li><a class="menu home" href="#">HOME</a></li>
                     <li><a class="menu" href="#">ABOUT</a></li>
                     <li><a class="menu" href="#">MENUS</a></li>
                     <li><a class="menu" href="#">OFFERS</a></li>
