feat: :sparkles: Agregando iconos

--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
                         <a href="#">CONTACT</a>
                         <a href="#">LOCATION</a>
                     </li>
-                    <div class="iconos"></div>
+                    <div class="iconos">
+                        <i class='bx bxl-facebook-circle' style='color:#ffffff' ></i>
+                        <i class='bx bxl-twitter' style='color:#ffffff' ></i>
+                        <i class='bx bxl-instagram-alt' style='color:#ffffff' ></i>
+                        <i class='bx bxl-pinterest' style='color:#ffffff' ></i>
+                    </div>
                 </div>
             </div>
             <img class="img10" src="storage/img/placeYourImageHere5.png" alt="img16-comida">
