--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                 </ul>
             </div>
         </nav>
-        <section>
+        <section class="section1">
             <div class="container1">
-                <img class="img2" src="storage/img/placeYourImageHere1.png" alt="img-comida">
+                <div class="containerimg2">
+                    <img class="img2" src="storage/img/placeYourImageHere1.png" alt="img-comida">
+                </div>
                 <div class="titulo">
                     <h1 class="letratitulo">Contact Us For Best Breakfasr</h1>
                     <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius quasi nam, a voluptate
@@ -52,7 +54,7 @@
                     <img class="img3" src="storage/img/placeYourImageHereGaleria0.png" alt="img2-comida">
                     <div class="container2">
                         <h1>About Us</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perferendis unde provident eum, maiores aut nam quae perspiciatis, possimus ducimus neque. Rerum, dolorum perspiciatis qui culpa totam harum. Expedita, illum!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perferendis unde provident eum, maiores aut nam quae perspiciatis, possimus ducimus neque. Rerum, dolorum perspiciatis qui culpa totam harum. </p>
                     </div>
                 </div>
             </article>
