style: :lipstick: Mejoras de diseño

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +8,15 @@
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
     <header>
         <nav>
             <div>
                 <ul class="mnu">
                     <li><a class="menu home" href="#">HOME</a></li>
-                    <li><a class="menu" href="#">ABOUT</a></li>
-                    <li><a class="menu" href="#">MENUS</a></li>
-                    <li><a class="menu" href="#">OFFERS</a></li>
+                    <li><a class="menu" href="#pag2">ABOUT</a></li>
+                    <li><a class="menu" href="#divpag3">MENUS</a></li>
+                    <li><a class="menu" href="#mit2">OFFERS</a></li>
                 </ul>
             </div>
             <div class="icon1">
@@ -26,9 +24,9 @@
             </div>
             <div>
                 <ul class="mnu">
-                    <li><a class="menu" href="#">GALLERY</a></li>
-                    <li><a class="menu" href="#">CONTACT</a></li>
-                    <li><a class="menu" href="#">BLOG</a></li>
+                    <li><a class="menu" href="#divpag3">GALLERY</a></li>
+                    <li><a class="menu" href="#pag6">CONTACT</a></li>
+                    <li><a class="menu" href="#pag6">BLOG</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +46,7 @@
         </section>
     </header>
     <main>
-        <section class="pag2">
+        <section class="pag2" id="pag2">
             <article class="mit1">
                 <div class="art1">
                     <img class="img3" src="storage/img/placeYourImageHereGaleria0.png" alt="img2-comida">
@@ -58,7 +56,7 @@
                     </div>
                 </div>
             </article>
-            <article class="mit2">
+            <article class="mit2" id="mit2">
                 <img class="forma" src="storage/img/placeYourImageHereFood.png" alt="img3-forma">
                 <img class="img4" src="storage/img/placeYourImageHereFood0.png" alt="img4-comida">
                 <img class="img5" src="storage/img/placeYourImageHereFood3.png" alt="img5-comida">
@@ -72,7 +70,7 @@
             </article>
         </section>
         <section class="pag3">
-            <div class="divpag3">
+            <div class="divpag3" id="divpag3">
                 <h1>Our Food Gallery</h1>
             <div class="galeria">
                 <img class="img7" src="storage/img/placeYourImageHereGaleria0.png" alt="img7-comida">
@@ -117,7 +115,7 @@
                 </div>
             </div>
         </section>
-        <section class="pag6">
+        <section class="pag6" id="pag6">
             <div class="cinta">
                 <div class="container5">
                     <h1>Enjoy Best Meal</h1>
